updated java files to be 7 compatible